--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node src/api/server.js"
-
+    "start": "node src/api/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
     "ethers": "^5.4.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "level": "^6.0.1"
   }
 }
