--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "ethers": "^5.4.4",
     "express": "^4.18.2",
-    "level": "^6.0.1"
+    "http-proxy-middleware": "^2.0.6",
+    "level": "^6.0.1",
+    "node-fetch": "^3.3.2"
   }
 }
